<resources>
    <string name="app_name">Battle Gaming BD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BASS_URL">https://battlegamingbd.com/api/</string>

    <string name="text1">Battle Gaming BD এর অংশগ্রহণ করা ম্যাচগুলো Phone
        এ ওপেন করার পর থেকে Screen Record করে রাখবেন এবং Plane এ উঠার পরে Record বন্ধ করে দিবেন
        ঐ ক্ষেএে আপনার Game এ Lag হবে না।  Video দিলে Reward পাবেন। Match চলাকালীন সময় আপনার Gameplay
        আমাদের কাছে সন্দেহজনক মনে হলে আপনার কাছে  Gameplay চাওয়া হবে। প্রতিদিনের Match এই ভাবে Record করবেন।
        আমরা 24 ঘন্টার মধ্যে আপনার কাছে Video না
        চাইলে আপনি Video টি Delete করে দিতে পারবেন।আশা রাখছি সবাই সহযোগিতা করবেন।এখন সবার Gameplay Fair হবে😍 ধন্যবাদ। </string>

    <string name="ludo_text">🇧🇩 যারা যারা আমাদের অ্যাপ লুডু গেম খেলে টাকা ইনকাম করতে চান,তারা দেরি না করে
        এখনই লুডু কিং অ্যাপটি ইন্সটল করুন।আর ম্যাচ আ জইন করার পরে Just টাইমের ১০ মিনিট আগে রুম কোড দেয়া হবে।তখন রুম কোডটি কপি করে লুডু কিং
        অ্যাপ এ গিয়ে পেস্ট করে জইন করুন। এই ভাবে আপনি আমাদের  অ্যাপ থেকে টাকা ইনকাম করতে পারবেন।</string>


    <string name="text2">🇧🇩 আপনার Free Fire আইডি লেভেল 30 এর নিচে হলে আপনি এখানে খেলতে পারবেন না।</string>

    <string name="text2_pubg">🇧🇩 আপনার PUBG আইডি লেভেল 30 এর নিচে হলে আপনি এখানে খেলতে পারবেন না।</string>

    <string name="text2_pubg_lite">🇧🇩 আপনার PUBG Lite আইডি লেভেল 30 এর নিচে হলে আপনি এখানে খেলতে পারবেন না।</string>

    <string name="text3">🇧🇩 রুম আইডি এবং পাসওয়ার্ড  Match টাইমের 10 থেকে 15 মিনিট আগে দেয়া হবে।আপনি যদি না জানেন কিভাবে
        রুম এ Join করতে হবে তাহলে এই Video টি দেখে নিন।Click Here</string>


    <string name="text4">🇧🇩 রুম আইডি এবং পাসওয়ার্ড Unregistered কারো সাথে Share করবেন না।</string>

    <string name="text5">🇧🇩 কেউ যদি  হ্যাক অথবা টিমিং করার সময় ধরা পরেন তাহলে তাকে অ্যাপ থেকে Banned করে দেয়া হবে।</string>

    <string name="text6">🇧🇩 😍 Duo এবং Squad এ আপনার Team mate না থাকলে  রুম এ গিয়ে Random প্লেয়ারের সাথে খেলতে হবে। রুম এর মধ্যে অন্য
        Team কে Disturb করলে সাথে সাথে রুম থেকে বের করে দেয়া হবে এবং আপনার টাকা ফেরত দেয়া হবে না।</string>

    <string name="text7">🇧🇩 প্রতিটি কিল এবং Booyah এর Reward Match শেষে 30 মিনিট এর মধ্যে দেয়া হবে যদি কোনো Server এ  Promblem না থাকে।</string>

    <string name="text8">🇧🇩 আপনি যদি না জানেন কিভাবে টাকা অ্যাড করতে হয় তাহলে এই Video টি দেখে নিন। Click Here</string>
    <string name="verify_text">*First Send Money to Battle Gaming BD Personal Number Then Verify your payment by Entering Your information</string>
    <string name="personal_number">## 01836890799 Battle Gaming BD Personal Number for All</string>





</resources>
