<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.MatchDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/matchDetailsJointNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/matchDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/matchDetailsImage">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/matchDetailsMatchName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Match Name"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/matchDetailsDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Match date"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="TOTAL PRIZE"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="PER KILL"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="ENTRY FEE"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/matchDetailsTotalPrize"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="00"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/matchDetailsPerKill"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="00"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/matchDetailsEntryFee"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="00"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="TYPE"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="VERSION"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="MAP"
                            android:textSize="17sp"
                            android:textStyle="bold" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:padding="3dp"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/matchDetailsType"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="type"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/matchDetailsVersion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="version"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/matchDetailsMap"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:lines="1"
                            android:text="map"
                            android:textColor="@color/DarkBlue"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayoutInst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">


                <TextView
                    android:id="@+id/instruction1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/text1"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text2"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text3"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text4"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text5"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text6"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text7"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/instruction8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text8"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/participatedListShowBtn"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/load"
                    android:text="Load Participated" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/participatedRecyclerView"
                    android:padding="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/matchDetailsJointNow"
        android:text="Join now "
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:background="@color/Teal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>